add weather app with highcharts

--- a/weather/index.html
+++ b/weather/index.html
@@ -6,7 +6,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>Some Weather - Chris Kihneman</title>
+	<title>Get Weather</title>
 	<meta name="description" content="Some Weather">
 	<meta name="author" content="Chris Kihneman">
 	<!--[if lt IE 9]>
@@ -18,11 +18,6 @@
 	<link rel="stylesheet" href="styles/base.css">
 	<link rel="stylesheet" href="styles/skeleton.css">
 	<link rel="stylesheet" href="styles/layout.css">
-
-	<!-- <link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png"> -->
 
 </head>
 <body>
@@ -49,6 +44,7 @@
 	<script src="scripts/libs/backbone.js"></script>
 	<script src="scripts/libs/highcharts.js"></script>
 
+	<script src="scripts/mylibs/my.js"></script>
 	<script src="scripts/mylibs/geolocator.js"></script>
 	<script src="scripts/mylibs/tpl.js"></script>
 	<script src="scripts/mylibs/mixins.js"></script>
