remove unused events on reveal

--- a/presentations/agency-life/index.html
+++ b/presentations/agency-life/index.html
@@ -448,6 +448,8 @@
 					* the art of email and talking to clients
 
 					* be a team player
+
+					* be a master of your workstation and tools
 				</section>
 
 				<section data-markdown>
@@ -529,15 +531,15 @@
 			// Load the scripts and, when completed, initialize reveal.js
 			head.js.apply( null, scripts.concat([function() {
 
-				// Fires when a slide with data-state=customevent is activated
-				Reveal.addEventListener( 'customevent', function() {
-					console.log( '"customevent" has fired' );
-				} );
+				// // Fires when a slide with data-state=customevent is activated
+				// Reveal.addEventListener( 'customevent', function() {
+				// 	console.log( '"customevent" has fired' );
+				// } );
 
-				// Fires each time a new slide is activated
-				Reveal.addEventListener( 'slidechanged', function( event ) {
-					// event.previousSlide, event.currentSlide, event.indexh, event.indexv
-				} );
+				// // Fires each time a new slide is activated
+				// Reveal.addEventListener( 'slidechanged', function( event ) {
+				// 	// event.previousSlide, event.currentSlide, event.indexh, event.indexv
+				// } );
 
 				// Full list of configuration options available here:
 				// https://github.com/hakimel/reveal.js#configuration
