--- a/presentations/agency-life/index.html
+++ b/presentations/agency-life/index.html
@@ -12,6 +12,8 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
+		<link rel="shortcut icon" href="../../images/favicon.ico">
+
 		<link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
 		<link rel="stylesheet" href="css/reset.css">
