fix sizing on slide

--- a/presentations/daily-jquery/index.html
+++ b/presentations/daily-jquery/index.html
@@ -223,8 +223,8 @@
                     </section>
                 </section>
 
-                <section data-markdown class="xl">
-                    # Getting `this`
+                <section data-markdown>
+                    ## Getting `this`
 
                     What is `this`?
 
