fix sizing on slide

--- a/presentations/daily-jquery/index.html
+++ b/presentations/daily-jquery/index.html
@@ -275,7 +275,7 @@
                         Remember, jQuery methods always (almost always) return themselves...chain it!
                     </section>
                     <section data-markdown>
-                        # Don't make sizzle work harder than it needs to!
+                        ### Don't make sizzle work harder than it needs to!
 
                         Sizzle is the dom query engine in jQuery, it's great and all, but dont overwork it if you don't have to.
 
